--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,23 @@
 {
-  "name": "Spif FE",
-  "version": "0.0.3",
-  "manifest_version": 2,
-  "minimum_chrome_version": "29",
-  "icons": {
-    "128": "asset/img/icon_128.png"
-  },
-  "app": {
-    "background": {
-      "scripts": ["app/background.js"]
-    }
-  },
-  "permissions": [
-      {"socket": ["tcp-connect"]},
-      "storage"
-  ]
+    "name": "Spif FE",
+    "short_name": "Spif FE",
+    "description": "Spif FE is a Frontend for Gemstone IV.",
+    "author": "Kyle Spraggs (theman@spiffyjr.me)",
+    "version": "0.2.1",
+    "manifest_version": 2,
+    "minimum_chrome_version": "29",
+    "icons": {
+        "128": "asset/img/icon_128.png"
+    },
+    "app": {
+        "background": {
+            "scripts": ["app/background.js"]
+        }
+    },
+    "permissions": [
+        {
+            "socket": ["tcp-connect"]
+        },
+        "storage"
+    ]
 }
