--- a/settings-sample.json
+++ b/settings-sample.json
@@ -1,149 +1,160 @@
 {
-    "css": {
-        "bold": {
-            "color": "yellow",
-            "fontWeight": "bold"
-        },
-        "deaths": {
-            "color": "red"
-        },
-        "casting": {
-            "color": "#9090ff"
-        },
-        "code": {
-            "color": "#008000"
-        },
-        "lich": {
-            "color": "#008000"
-        },
-        "link": {
-            "color": "saddlebrown"
-        },
-        "lnet": {
-            "color": "#0099ff"
-        },
-        "logons": {
-            "color": "darkgreen"
-        },
-        "logoffs": {
-            "color": "darkred"
-        },
-        "numbers": {
-            "color": "#555555"
-        },
-        "mono": {
-            "fontFamily": "\"Lucida Console\", Monaco, monospace",
-            "whiteSpace": "pre-wrap"
-        },
-        "paths": {
-            "color": "#0099ff"
-        },
-        "prime": {
-            "color": "#808000"
-        },
-        "private": {
-            "color": "#ffffff",
-            "fontWeight": "bold"
-        },
-        "prompt": {
-            "color": "#555555"
-        },
-        "roomName": {
-            "color": "white",
-            "fontWeight": "bold"
-        },
-        "status": {
-            "color": "#565656"
-        },
-        "speech": {
-            "color": "#66ff66"
-        },
-        "whisper": {
-            "color": "#66ff66"
-        },
-        "familiar": {
-            "backgroundColor": "#00001a"
-        },
-        "thoughts": {
-            "backgroundColor": "#001a00"
-        },
-        "voln": {
-            "backgroundColor": "#001a00"
-        },
-        "position": {
-            "color": "#565656"
-        },
-        "magic": {
-            "color": "#909ff"
-        },
-        "disk": {
-            "color": "#88aaff"
-        }
+  "css": {
+    "bold": {
+      "color": "yellow",
+      "fontWeight": "bold"
     },
-    "highlights": [
-        {
-            "css": "numbers",
-            "regex": "\\([0-9][0-9]\\:[0-9][0-9]\\:[0-9][0-9]\\)$"
-        },
-        {
-            "css": "lnet",
-            "regex": "^\\[LNet\\]"
-        },
-        {
-            "css": "prime",
-            "regex": "^\\[Prime\\]"
-        },
-        {
-            "css": "code",
-            "regex": "^\\[Code\\]"
-        },
-        {
-            "css": "paths",
-            "regex": "Obvious (?:exits|paths):"
-        },
-        {
-            "css": "private",
-            "regex": "^\\[Private(?:To)?\\]"
-        },
-        {
-            "css": "lich",
-            "regex": "^--- Lich:.*"
-        },
-        {
-            "css": "position",
-            "regex": "\\((?:calmed|dead|flying|hiding|kneeling|prone|sitting|sleeping|stunned)\\)"
-        },
-        {
-            "css": "magic",
-            "regex": "^(?:You gesture|You intone a phrase of elemental power|You recite a series of mystical phrases|You trace a series of glowing runes|Your hands glow with power as you invoke|You trace a simple rune while intoning|You trace a sign while petitioning the spirits|You trace an intricate sign that contorts in the air).*$"
-        },
-        {
-            "css": "magic",
-            "regex": "^(?:Cast Roundtime 3 Seconds\\.|Your spell is ready\\.)$"
-        },
-        {
-            "css": "disk",
-            "regex": "([A-Z][a-z]+ disk)"
-        }
-    ],
-    "macros": {
-        "ctrl+d": "\\xstance defensive\\r",
-        "ctrl+o": "\\xstance offensive\\r"
+    "casting": {
+      "color": "#9090ff"
     },
-    "presets": {
-        "bold": "bold",
-        "disconnects": "logoffs",
-        "deaths": "deaths",
-        "familiar": "familiar",
-        "link": "link",
-        "logons": "logons",
-        "logoffs": "logoffs",
-        "mono": "mono",
-        "prompt": "prompt",
-        "roomName": "roomName",
-        "speech": "speech",
-        "thoughts": "thoughts",
-        "voln": "voln",
-        "whisper": "whisper"
+    "code": {
+      "color": "#008000"
+    },
+    "deaths": {
+      "color": "red"
+    },
+    "disk": {
+      "color": "#88aaff"
+    },
+    "familiar": {
+      "backgroundColor": "#00001a"
+    },
+    "lich": {
+      "color": "#008000"
+    },
+    "link": {
+      "color": "saddlebrown"
+    },
+    "lnet": {
+      "color": "#0099ff"
+    },
+    "logoffs": {
+      "color": "darkred"
+    },
+    "logons": {
+      "color": "darkgreen"
+    },
+    "magic": {
+      "color": "#9090ff"
+    },
+    "mono": {
+      "fontFamily": "\"Lucida Console\", Monaco, monospace",
+      "whiteSpace": "pre-wrap"
+    },
+    "numbers": {
+      "color": "#555555"
+    },
+    "paths": {
+      "color": "#0099ff"
+    },
+    "position": {
+      "color": "#565656"
+    },
+    "prime": {
+      "color": "#808000"
+    },
+    "private": {
+      "color": "#ffffff",
+      "fontWeight": "bold"
+    },
+    "prompt": {
+      "color": "#555555"
+    },
+    "roomName": {
+      "color": "white",
+      "fontWeight": "bold"
+    },
+    "speech": {
+      "color": "#66ff66"
+    },
+    "status": {
+      "color": "#565656"
+    },
+    "thoughts": {
+      "backgroundColor": "#001a00"
+    },
+    "uac": {
+      "color": "#3DB83D"
+    },
+    "voln": {
+      "backgroundColor": "#001a00"
+    },
+    "whisper": {
+      "color": "#66ff66"
     }
+  },
+  "highlights": [
+    {
+      "css": "numbers",
+      "regex": "\\([0-9][0-9]\\:[0-9][0-9]\\:[0-9][0-9]\\)$"
+    },
+    {
+      "css": "lnet",
+      "regex": "\\[LNet\\]"
+    },
+    {
+      "css": "prime",
+      "regex": "\\[Prime\\]"
+    },
+    {
+      "css": "code",
+      "regex": "\\[Code\\]"
+    },
+    {
+      "css": "paths",
+      "regex": "Obvious (?:exits|paths):"
+    },
+    {
+      "css": "private",
+      "regex": "\\[Private(?:To)?\\]"
+    },
+    {
+      "css": "lich",
+      "regex": "^--- Lich:.*"
+    },
+    {
+      "css": "position",
+      "regex": "\\((?:calmed|dead|flying|hiding|kneeling|prone|sitting|sleeping|stunned)\\)"
+    },
+    {
+      "css": "magic",
+      "regex": "(?:You gesture|You intone a phrase of elemental power|You recite a series of mystical phrases|You trace a series of glowing runes|Your hands glow with power as you invoke|You trace a simple rune while intoning|You trace a sign while petitioning the spirits|You trace an intricate sign that contorts in the air).*"
+    },
+    {
+      "css": "magic",
+      "regex": "(?:Cast Roundtime 3 Seconds\\.|Your spell is ready\\.)"
+    },
+    {
+      "css": "disk",
+      "regex": "([A-Z][a-z]+ disk)"
+    },
+    {
+      "css": "uac",
+      "regex": "Strike leaves foe vulnerable to a followup (?:jab|punch|grapple|kick) attack!| Foe remains vulnerable to a followup (?:jab|punch|grapple|kick) attack!"
+    },
+    {
+      "css": "magic",
+      "regex": "Your .* returns to normal."
+    }
+  ],
+  "macros": {
+    "ctrl+d": "\\xstance defensive\\r",
+    "ctrl+o": "\\xstance offensive\\r"
+  },
+  "presets": {
+    "bold": "bold",
+    "deaths": "deaths",
+    "disconnects": "logoffs",
+    "familiar": "familiar",
+    "link": "link",
+    "logoffs": "logoffs",
+    "logons": "logons",
+    "mono": "mono",
+    "prompt": "prompt",
+    "roomName": "roomName",
+    "speech": "speech",
+    "thoughts": "thoughts",
+    "voln": "voln",
+    "whisper": "whisper"
+  }
 }
